@@ -18,7 +18,6 @@ package org.keycloak.testsuite.forms;
 
 import java.io.Closeable;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -66,7 +65,6 @@ import org.keycloak.testsuite.pages.LoginPage;
 import org.keycloak.testsuite.pages.LoginPasswordResetPage;
 import org.keycloak.testsuite.pages.LoginPasswordUpdatePage;
 import org.keycloak.testsuite.pages.LogoutConfirmPage;
-import org.keycloak.testsuite.pages.VerifyEmailPage;
 import org.keycloak.testsuite.updaters.ClientAttributeUpdater;
 import org.keycloak.testsuite.util.AccountHelper;
 import org.keycloak.testsuite.util.BrowserTabUtil;
@@ -158,9 +156,6 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     protected InfoPage infoPage;
 
     @Page
-    protected VerifyEmailPage verifyEmailPage;
-
-    @Page
     protected LoginPasswordResetPage resetPasswordPage;
 
     @Page
@@ -175,7 +170,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     private int expectedMessagesCount;
 
     @Test
-    public void resetPasswordLink() throws IOException, MessagingException {
+    public void resetPasswordLink() throws IOException {
         String username = "login-test";
         String resetUri = oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials";
 
@@ -303,12 +298,12 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
         openResetPasswordUrlAndDoFlow(resetUri, "test-app", oauth.getRedirectUri(), false);
 
-        // Should be directly redirected to "application because of "redirect_uri" parameter
+        // Should be directly redirected to application because of "redirect_uri" parameter
         appPage.assertCurrent();
     }
 
     @Test
-    public void resetPasswordLinkErrorFlows() throws IOException {
+    public void resetPasswordLinkErrorFlows() {
         // Client not found
         driver.navigate().to(oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials?client_id=not_found");
         errorPage.assertCurrent();
@@ -345,7 +340,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordTwice() throws IOException, MessagingException {
+    public void resetPasswordTwice() throws IOException {
         String changePasswordUrl = resetPassword("login-test");
         events.clear();
 
@@ -353,7 +348,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordForceLogin() throws IOException, MessagingException {
+    public void resetPasswordForceLogin() throws IOException {
         // add the force login option in the reset-credential-email authenticator
         configureForceLogin(Boolean.TRUE.toString());
 
@@ -361,7 +356,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordForceLoginFederatedUser() throws IOException, MessagingException {
+    public void resetPasswordForceLoginFederatedUser() throws IOException {
         // create the example map storage user federation
         ComponentRepresentation memProvider = new ComponentRepresentation();
         memProvider.setName(UserStorageProvider.class.getName());
@@ -391,7 +386,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordTwiceInNewBrowser() throws IOException, MessagingException {
+    public void resetPasswordTwiceInNewBrowser() throws IOException {
         String changePasswordUrl = resetPassword("login-test");
         events.clear();
 
@@ -400,6 +395,33 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         driver.manage().deleteAllCookies();
 
         assertSecondPasswordResetFails(changePasswordUrl, oauth.getClientId());
+    }
+
+    @Test
+    public void resetPasswordTwiceInSecondBrowser() throws IOException {
+        String username = "login-test";
+
+        initiateResetPasswordFromResetPasswordPage(username);
+
+        // Navigate the first browser to the set password page
+        assertEquals(expectedMessagesCount, greenMail.getReceivedMessages().length);
+        MimeMessage message = greenMail.getReceivedMessages()[greenMail.getReceivedMessages().length - 1];
+        String changePasswordUrl = MailUtils.getPasswordResetEmailLink(message);
+        driver.navigate().to(changePasswordUrl.trim());
+        updatePasswordPage.assertCurrent();
+        assertEquals("You need to change your password.", updatePasswordPage.getFeedbackMessage());
+
+        // Update the password update in a second browser.
+        driver2.navigate().to(changePasswordUrl.trim());
+        changePasswordOnUpdatePage(driver2);
+        assertThat(driver2.getCurrentUrl(), Matchers.containsString("client_id=test-app"));
+        assertThat(driver2.getPageSource(), Matchers.containsString("Your account has been updated."));
+        assertThat(driver2.getPageSource(), Matchers.containsString("Back to Application"));
+
+        // Updating the password in the first browser should now fail.
+        updatePasswordPage.changePassword(password, password);
+        errorPage.assertCurrent();
+        assertEquals("Action expired. Please continue with login now.", errorPage.getError());
     }
 
     public void assertSecondPasswordResetFails(String changePasswordUrl, String clientId) {
@@ -417,12 +439,12 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWithSpacesInUsername() throws IOException, MessagingException {
+    public void resetPasswordWithSpacesInUsername() throws IOException {
         resetPassword(" login-test ");
     }
 
     @Test
-    public void resetPasswordCancelChangeUser() throws IOException, MessagingException {
+    public void resetPasswordCancelChangeUser() {
         initiateResetPasswordFromResetPasswordPage("test-user@localhost");
 
         events.expectRequiredAction(EventType.SEND_RESET_PASSWORD).detail(Details.USERNAME, "test-user@localhost")
@@ -443,12 +465,12 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordByEmail() throws IOException, MessagingException {
+    public void resetPasswordByEmail() throws IOException {
         resetPassword("login@test.com");
     }
 
     @Test
-    public void resetPasswordBackButton() throws IOException, MessagingException {
+    public void resetPasswordBackButton() {
         loginPage.open();
         loginPage.login("login@test.com", "wrongpassword");
         loginPage.resetPassword();
@@ -471,15 +493,15 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         getCleanup().addAuthenticationConfigId(configId);
     }
 
-    private String resetPassword(String username) throws IOException, MessagingException {
+    private String resetPassword(String username) throws IOException {
         return resetPassword(username, "resetPassword", false);
     }
 
-    private String resetPassword(String username, String password) throws IOException, MessagingException {
+    private String resetPassword(String username, String password) throws IOException {
         return resetPassword(username, password, false);
     }
 
-    private String resetPassword(String username, String password, boolean relogin) throws IOException, MessagingException {
+    private String resetPassword(String username, String password, boolean relogin) throws IOException {
         initiateResetPasswordFromResetPasswordPage(username);
 
         events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
@@ -544,7 +566,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
         return changePasswordUrl;
     }
 
-    private void resetPasswordInvalidPassword(String username, String password, String error) throws IOException, MessagingException {
+    private void resetPasswordInvalidPassword(String username, String password, String error) throws IOException {
 
         initiateResetPasswordFromResetPasswordPage(username);
 
@@ -584,7 +606,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWrongEmail() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordWrongEmail() {
         initiateResetPasswordFromResetPasswordPage("invalid");
 
         assertEquals(0, greenMail.getReceivedMessages().length);
@@ -593,7 +615,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordMissingUsername() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordMissingUsername() {
         loginPage.open();
         loginPage.resetPassword();
 
@@ -612,7 +634,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordExpiredCode() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCode() throws IOException {
         initiateResetPasswordFromResetPasswordPage("login-test");
 
         events.expectRequiredAction(EventType.SEND_RESET_PASSWORD)
@@ -641,7 +663,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordExpiredCodeShort() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeShort() throws IOException {
         final AtomicInteger originalValue = new AtomicInteger();
 
         RealmRepresentation realmRep = testRealm().toRepresentation();
@@ -680,9 +702,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordExpiredCodeShortPerActionLifespan() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeShortPerActionLifespan() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).build());
         testRealm().update(realmRep);
@@ -718,9 +740,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordExpiredCodeShortPerActionMultipleTimeouts() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeShortPerActionMultipleTimeouts() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         //Make sure that one attribute settings won't affect the other
         realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).verifyEmailLifespan(300).build());
@@ -759,7 +781,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
     // KEYCLOAK-4016
     @Test
-    public void resetPasswordExpiredCodeAndAuthSession() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeAndAuthSession() throws IOException {
         final AtomicInteger originalValue = new AtomicInteger();
 
         RealmRepresentation realmRep = testRealm().toRepresentation();
@@ -803,9 +825,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordExpiredCodeAndAuthSessionPerActionLifespan() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeAndAuthSessionPerActionLifespan() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).build());
         testRealm().update(realmRep);
@@ -846,9 +868,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordExpiredCodeAndAuthSessionPerActionMultipleTimeouts() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeAndAuthSessionPerActionMultipleTimeouts() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         //Make sure that one attribute settings won't affect the other
         realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).verifyEmailLifespan(300).build());
@@ -891,7 +913,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
     // KEYCLOAK-5061
     @Test
-    public void resetPasswordExpiredCodeForgotPasswordFlow() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeForgotPasswordFlow() throws IOException {
         final AtomicInteger originalValue = new AtomicInteger();
 
         RealmRepresentation realmRep = testRealm().toRepresentation();
@@ -940,9 +962,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordExpiredCodeForgotPasswordFlowPerActionLifespan() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeForgotPasswordFlowPerActionLifespan() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).build());
         testRealm().update(realmRep);
@@ -988,9 +1010,9 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordExpiredCodeForgotPasswordFlowPerActionMultipleTimeouts() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordExpiredCodeForgotPasswordFlowPerActionMultipleTimeouts() throws IOException {
         RealmRepresentation realmRep = testRealm().toRepresentation();
-        Map<String, String> originalAttributes = Collections.unmodifiableMap(new HashMap<>(realmRep.getAttributes()));
+        Map<String, String> originalAttributes = Map.copyOf(realmRep.getAttributes());
 
         //Make sure that one attribute settings won't affect the other
         realmRep.setAttributes(UserActionTokenBuilder.create().resetCredentialsLifespan(60).verifyEmailLifespan(300).build());
@@ -1037,7 +1059,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordDisabledUser() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordDisabledUser() {
         UserRepresentation user = findUser("login-test");
         try {
             user.setEnabled(false);
@@ -1055,7 +1077,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordNoEmail() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordNoEmail() {
         final String email;
 
         UserRepresentation user = findUser("login-test");
@@ -1077,7 +1099,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWrongSmtp() throws IOException, MessagingException, InterruptedException {
+    public void resetPasswordWrongSmtp() {
         final String[] host = new String[1];
 
         Map<String, String> smtpConfig = new HashMap<>();
@@ -1121,7 +1143,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWithLengthPasswordPolicy() throws IOException, MessagingException {
+    public void resetPasswordWithLengthPasswordPolicy() throws IOException {
         setPasswordPolicy("length");
 
         initiateResetPasswordFromResetPasswordPage("login-test");
@@ -1171,7 +1193,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordBeforeUserIsDisabled() throws IOException, MessagingException {
+    public void resetPasswordBeforeUserIsDisabled() throws IOException {
         initiateResetPasswordFromResetPasswordPage("login-test");
 
         assertEquals(1, greenMail.getReceivedMessages().length);
@@ -1190,7 +1212,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWithPasswordHistoryPolicy() throws IOException, MessagingException {
+    public void resetPasswordWithPasswordHistoryPolicy() throws IOException {
         //Block passwords that are equal to previous passwords. Default value is 3.
         setPasswordPolicy("passwordHistory");
 
@@ -1221,12 +1243,12 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordLinkOpenedInNewBrowser() throws IOException, MessagingException {
+    public void resetPasswordLinkOpenedInNewBrowser() throws IOException {
         resetPasswordLinkOpenedInNewBrowser(Constants.ACCOUNT_MANAGEMENT_CLIENT_ID);
     }
 
 
-    private void resetPasswordLinkOpenedInNewBrowser(String expectedSystemClientId) throws IOException, MessagingException {
+    private void resetPasswordLinkOpenedInNewBrowser(String expectedSystemClientId) throws IOException {
         String username = "login-test";
         String resetUri = oauth.AUTH_SERVER_ROOT + "/realms/test/login-actions/reset-credentials";
         driver.navigate().to(resetUri);
@@ -1275,7 +1297,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
 
     // KEYCLOAK-5982
     @Test
-    public void resetPasswordLinkOpenedInNewBrowserAndAccountClientRenamed() throws IOException, MessagingException {
+    public void resetPasswordLinkOpenedInNewBrowserAndAccountClientRenamed() throws IOException {
         // Temporarily rename client "account" . Revert it back after the test
         try (Closeable accountClientUpdater = ClientAttributeUpdater.forClient(adminClient, "test", Constants.ACCOUNT_MANAGEMENT_CLIENT_ID)
                 .setClientId("account-changed")
@@ -1288,7 +1310,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordLinkNewBrowserSessionPreserveClient() throws IOException, MessagingException {
+    public void resetPasswordLinkNewBrowserSessionPreserveClient() throws IOException {
         loginPage.open();
         loginPage.resetPassword();
 
@@ -1319,7 +1341,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     // KEYCLOAK-15239
     @Test
     @IgnoreBrowserDriver(FirefoxDriver.class) // TODO: https://github.com/keycloak/keycloak/issues/20526
-    public void resetPasswordWithSpnegoEnabled() throws IOException, MessagingException {
+    public void resetPasswordWithSpnegoEnabled() throws IOException {
         KerberosUtils.assumeKerberosSupportExpected();
 
         // Just switch SPNEGO authenticator requirement to alternative. No real usage of SPNEGO needed for this test
@@ -1386,7 +1408,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordInfoMessageWithDuplicateEmailsAllowed() throws IOException {
+    public void resetPasswordInfoMessageWithDuplicateEmailsAllowed() {
         RealmRepresentation realmRep = testRealm().toRepresentation();
         Boolean originalLoginWithEmailAllowed = realmRep.isLoginWithEmailAllowed();
         Boolean originalDuplicateEmailsAllowed = realmRep.isDuplicateEmailsAllowed();
@@ -1438,7 +1460,7 @@ public class ResetPasswordTest extends AbstractTestRealmKeycloakTest {
     }
 
     @Test
-    public void resetPasswordWithLoginHint() throws IOException {
+    public void resetPasswordWithLoginHint() {
         // Redirect directly to KC "forgot password" endpoint instead of "authenticate" endpoint
         String loginUrl = oauth.loginForm().build();
         String forgotPasswordUrl = loginUrl.replace("/auth?", "/forgot-credentials?"); // Workaround, but works
